--- a/index.html
+++ b/index.html
@@ -400,7 +400,8 @@
     overflow: hidden;
   }
 
-  .stats-strip::before {    content: '';
+  .stats-strip::before {
+    content: '';
     position: absolute;
     inset: 0;
     background: repeating-linear-gradient(45deg, transparent, transparent 20px, rgba(255,255,255,0.02) 20px, rgba(255,255,255,0.02) 40px);
@@ -601,7 +602,7 @@
     <div class="hero-title-en">YAZD <span class="accent">SANDBOT</span><br>CUP 2026</div>
     <div class="hero-title-fa">جام ربات‌های شنی یزد ۱۴۰۵</div>
     <p class="hero-subtitle">سری مسابقات ربات‌های متحرک بدون سرنشین زمینی<br>سفری از ایده تا ساخت، در قلب کویر…</p>
-    <a href="https://survey.porsline.ir/s/mY1RYHuk" target="_blank" class="hero-cta">ثبت‌نام کنید ←</a>
+    <a href="#register" class="hero-cta">ثبت‌نام کنید ←</a>
     <div class="slogan-badge">⚙ رقابتی سخت برای بقا مهندسی!</div>
   </div>
 </div>
@@ -686,16 +687,22 @@
     <h2 class="section-title" style="color:var(--brown-deep);font-size:clamp(2rem,5vw,3rem);margin-bottom:1rem;">آماده‌اید وارد میدان شوید؟</h2>
     <p>فرصت را از دست ندهید. اکنون تیم خود را ثبت‌نام کنید و این ماجراجویی مهندسی را آغاز کنید.</p>
     <a href="https://survey.porsline.ir/s/mY1RYHuk" target="_blank" class="cta-big">ثبت‌نام تیم ←</a>
-    <div style="margin-top:2rem;color:var(--text-mid);font-size:0.85rem;">@YSB_CUP</div>
+    <div style="margin-top:2rem;color:var(--text-mid);font-size:0.85rem;">
+      <a href="https://t.me/YSB_CUP" target="_blank" style="color:var(--orange);text-decoration:none;margin:0 0.5rem;">تلگرام</a> | 
+      <a href="https://eitaa.com/YSB_Cup" target="_blank" style="color:var(--orange);text-decoration:none;margin:0 0.5rem;">ایتا</a>
+    </div>
   </div>
 </div>
 
 <!-- Social -->
 <div class="social-bar">
-  <span>ارتباط با ما: </span>
-  <a href="#">اینستاگرام</a>
-  <a href="#">تلگرام</a>
-  <span style="margin-right:1rem;color:var(--sand-mid);">@YSB_CUP</span>
+  <span>کانال‌های ما: </span>
+  <a href="https://t.me/YSB_CUP" target="_blank">تلگرام</a>
+  <a href="https://eitaa.com/YSB_Cup" target="_blank">ایتا</a>
+  <span style="margin: 0 1.5rem; color:rgba(200,160,80,0.3);">|</span>
+  <span>پشتیبانی: </span>
+  <a href="https://t.me/YSB_Support" target="_blank">تلگرام </a>
+  <a href="https://eitaa.com/YSB_Support" target="_blank">ایتا </a>
 </div>
 
 <!-- Footer -->
